--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build:w": "npx rimraf ./dist && node ./webpack.build.js",
-    "build": "npx rimraf ./dist && webpack --config webpack.test.js --mode production",
+    "build": "npx rimraf ./dist && webpack --config webpack.modern.js --mode production",
+    "build:l": "webpack --config webpack.legacy.js --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "core-js": "^3.6.0",
     "glob": "^7.1.6",
@@ -23,5 +25,12 @@
     "webpack-cli": "^3.3.10",
     "webpack-nomodule-plugin": "^1.0.1",
     "webpack-watched-glob-entries-plugin": "^2.1.5"
+  },
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4"
   }
 }
